<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    xmlns:numberpicker="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <ImageButton
                android:id="@+id/button_add_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_add_24"
                android:contentDescription="@string/select_image"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/tvHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/button_add_image"
                android:layout_marginStart="16dp"
                android:text="@string/add_a_picture"
                android:textSize="16sp"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photo_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>
        <LinearLayout
            android:id="@+id/layout_spinner_realtor"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingTop="8dp"
            android:orientation="horizontal"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/realtor" />
            <Spinner
                android:id="@+id/spinner_realtor"
                android:layout_width="match_parent"
                android:layout_height="48dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_spinner_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type" />
            <Spinner
                android:id="@+id/spinner_type"
                android:layout_width="match_parent"
                android:layout_height="48dp"/>
        </LinearLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:minWidth="370dp"
            android:rowCount="4"
            android:columnCount="2"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:verticalSpacing="5dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1">
                <EditText
                    android:id="@+id/edit_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:textAlignment="viewEnd"
                    tools:text="500000"
                    android:autofillHints="@string/price"
                    android:hint="@string/price"
                    android:drawableStart="@drawable/ic_money_dollar"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/textview_price_in_euro"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center_vertical|end"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="@string/euro_sign" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_surface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:errorEnabled="true"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1" >
                <EditText
                    android:id="@+id/edit_surface"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:textAlignment="viewEnd"
                    tools:text="700"
                    android:autofillHints="@string/square_feet"
                    android:hint="@string/square_feet"
                    android:drawableStart="@drawable/ic_surface"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/textview_surface_in_m2"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center_vertical|end"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="@string/squared_meter" />
            <TextView
                android:id="@+id/textview_room_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/room_count"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnWeight="1"/>
            <com.travijuu.numberpicker.library.NumberPicker
                android:id="@+id/number_picker_room_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_columnWeight="1"
                numberpicker:custom_layout="@layout/number_picker_custom_layout"/>
            <TextView
                android:id="@+id/textview_bathroom_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/bathroom_count"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_columnWeight="1"/>
            <com.travijuu.numberpicker.library.NumberPicker
                android:id="@+id/number_picker_bathroom_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_columnWeight="1"
                numberpicker:custom_layout="@layout/number_picker_custom_layout"/>
        </GridLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:gravity="start|top"
                android:autofillHints="@string/description"
                android:inputType="textMultiLine|textCapSentences"
                android:hint="@string/description"
                android:lines="10"
                android:textAlignment="gravity" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_address_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:errorEnabled="true"
            android:visibility="gone">
            <AutoCompleteTextView
                android:id="@+id/autocomplete_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:hint="@string/address" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:id="@+id/layout_address_textviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">
                <EditText
                    android:id="@+id/edit_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:autofillHints="@string/address"
                    android:inputType="textCapSentences"
                    android:hint="@string/address"
                    android:textAlignment="gravity" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_postal_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">
                <EditText
                    android:id="@+id/edit_postal_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:autofillHints="@string/postal_code"
                    android:inputType="numberSigned"
                    android:hint="@string/postal_code"
                    android:textAlignment="gravity" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">
                <EditText
                    android:id="@+id/edit_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:autofillHints="@string/city"
                    android:inputType="textCapWords"
                    android:hint="@string/city"
                    android:textAlignment="gravity" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/edit_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:autofillHints="@string/country_state"
                    android:inputType="textCapWords"
                    android:hint="@string/country_state"
                    android:textAlignment="gravity" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_point_of_interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_sold_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">
            <EditText
                android:id="@+id/edit_sold_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:autofillHints="@string/country_state"
                android:inputType="date"
                android:hint="@string/select_sold_date"
                android:textAlignment="gravity"
                android:focusable="false"
                android:visibility="gone"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:enabled="false"/>
    </LinearLayout>
</ScrollView>