<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSelectImage"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTakePhoto"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:contentDescription="@string/picture"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@+id/btnTakePhoto"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        >

        <EditText
            android:id="@+id/edit_desc_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Description"
            android:hint="@string/description"
            android:inputType="textCapSentences"
            tools:ignore="VisualLintTextFieldSize"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@+id/description_input_layout"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_button_photo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@+id/description_input_layout"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
