<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="450dp"
...
                android:layout_marginStart="8dp"
                app:errorEnabled="true"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1" >
                <EditText
                    android:id="@+id/edit_price_max"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:textAlignment="viewEnd"
                    tools:text="700"
                    android:autofillHints="@string/maximum"
...
            android:layout_gravity="center">
            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@id/buttonSearch"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/cancel" />
            <Button
                android:id="@+id/buttonSearch"
                android:layout_width="wrap_content"
                android:layout_marginStart="8dp"
...
