<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:icon="@drawable/ic_add_24"
        android:title="@string/menu_add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search_24"
        android:title="@string/action_search"
        app:showAsAction="always" />
</menu>